# esp32-idf-tpl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generate_qr.py  idf_component.yml  nvs_data.csv  nvs_partition_image.cmake  partitions.csv  requirements.txt  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  ota.c  ota.h  prov.c  prov.h
